--- a/images/My Profile.htm
+++ b/images/My Profile.htm
@@ -1,27 +1,27 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-    <meta charset="utf-8">
+<!DOCTYPE html>
+<!-- saved from url=(0070)file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/index.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="My portfolio">
     <meta name="author" content="Utsab Malakar">
 
     <title>My Profile</title>
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="css/body_stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="css/spacing.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Playfair+Display|Poppins|Roboto|Saira+Extra+Condensed:400,500,700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/f46714c415.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="./My Profile_files/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="./My Profile_files/body_stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="./My Profile_files/spacing.css">
+    <link href="./My Profile_files/css" rel="stylesheet">
+    <script src="./My Profile_files/f46714c415.js" crossorigin="anonymous"></script><link rel="stylesheet" href="./My Profile_files/free.min.css" media="all"><link rel="stylesheet" href="./My Profile_files/free-v4-font-face.min.css" media="all"><link rel="stylesheet" href="./My Profile_files/free-v4-shims.min.css" media="all">
 
 </head>
 <body id="page-top">
 
   <!-- Navigation -->
     <nav class="navbar bg-primary fixed-top" id="sideNav">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="nav-title">UTSAB MALAKAR</span>
+        <a class="navbar-brand js-scroll-trigger" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/index.html#page-top">
+            <span class="nav-title">Utsab Malakar</span>
             <span class="nav-image">
-                <img class="img-profile rounded-circle" src="images/my_pic.jpg" alt="">
+                <img class="img-profile rounded-circle" src="./My Profile_files/my_pic.jpg" alt="">
             </span>
 
         </a>
@@ -33,22 +33,22 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-list" id="top-menu">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger active" href="#page-top">About</a>
+          <a class="nav-link js-scroll-trigger active" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/index.html#page-top">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          <a class="nav-link js-scroll-trigger" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/index.html#experience">Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+          <a class="nav-link js-scroll-trigger" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/index.html#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+          <a class="nav-link js-scroll-trigger" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/index.html#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/index.html#interests">Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+          <a class="nav-link js-scroll-trigger" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/index.html#portfolio">Portfolio</a>
         </li>
       </ul>
     </div>
@@ -70,11 +70,11 @@
             <p>I am a Computer Science student. I have worked as an Android developer at EbPearls Pty Ltd for more than 3 years and had a great opportunity to work in some very good projects.
             </p>
             <div class="social-icons">
-              <a href="http://linkedin.com">
-                <i class="fab fa-linkedin-in"></i>
+              <a href="http://linkedin.com/">
+                <i class="fab fa-linkedin-in" aria-hidden="true"></i>
               </a>
-              <a href="documents/MyResume.pdf" download="MyResume.pdf" target="_blank">
-                <i class="fas fa-file-pdf"></i>
+              <a href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/documents/MyResume.pdf" download="MyResume.pdf" target="_blank">
+                <i class="fas fa-file-pdf" aria-hidden="true"></i>
               </a>
             </div>
           </div>
@@ -135,50 +135,50 @@
             <div class="subheading mb-3">Programming Tools</div>
             <ul class="list-inline mt-0">
               <li class="line-inline-item">
-                <i class="fab fa-android"></i>
+                <i class="fab fa-android" aria-hidden="true"></i>
               </li>
               <li class="line-inline-item">
-                <i class="fab fa-apple"></i>
+                <i class="fab fa-apple" aria-hidden="true"></i>
               </li>
               <li class="line-inline-item">
-                <i class="fab fa-java"></i>
+                <i class="fab fa-java" aria-hidden="true"></i>
               </li>
               <li class="line-inline-item">
-                <i class="fab fa-database"></i>
+                <i class="fab fa-database" aria-hidden="true"></i>
               </li>
               <li class="line-inline-item">
-                <i class="fab fa-html5"></i>
+                <i class="fab fa-html5" aria-hidden="true"></i>
               </li>
               <li class="line-inline-item">
-                <i class="fab fa-css3-alt"></i>
+                <i class="fab fa-css3-alt" aria-hidden="true"></i>
               </li>
               <li class="line-inline-item">
-                <i class="fab fa-python"></i>
+                <i class="fab fa-python" aria-hidden="true"></i>
               </li>
               <li class="line-inline-item">
-                <i class="fas fa-file-powerpoint"></i>
+                <i class="fas fa-file-powerpoint" aria-hidden="true"></i>
               </li>
             </ul>
             <div class="subheading mb-3 mt-3">Android Projects</div>
             <ul class="fa-ul mt-0">
               <li>
-                <i class="fa-li fas fa-check"></i>
+                <i class="fa-li fas fa-check" aria-hidden="true"></i>
                 <a href="https://play.google.com/store/apps/details?id=com.official.rfarm" target="_blank">Farm Service Manager</a>
               </li>
               <li>
-                <i class="fa-li fas fa-check"></i>
+                <i class="fa-li fas fa-check" aria-hidden="true"></i>
                 Wubafox
               </li>
               <li>
-                <i class="fa-li fas fa-check"></i>
+                <i class="fa-li fas fa-check" aria-hidden="true"></i>
                 <a href="https://play.google.com/store/apps/details?id=com.bsociable.bsociableapp">BSociable</a>
               </li>
               <li>
-                <i class="fa-li fas fa-check"></i>
+                <i class="fa-li fas fa-check" aria-hidden="true"></i>
                 <a href="https://play.google.com/store/apps/details?id=com.cyberdesignworks.wasteinfo.moirashire">Moira Shire Waste Info</a>
               </li>
               <li>
-                <i class="fa-li fas fa-check"></i>
+                <i class="fa-li fas fa-check" aria-hidden="true"></i>
                 Worked in various other waste management apps<br>
                  - <a href="https://play.google.com/store/apps/details?id=com.penrith.wasteinfo">Penrith Wasteinfo</a><br>
                  - <a href="https://play.google.com/store/apps/details?id=com.application.wasteinfo">Brisbane Bin and recycling</a><br>
@@ -201,78 +201,78 @@
             <h3 class="mb-5">My Recent Works</h3>
             <div class="row mb-3">
               <div class="flex-item">
-                <a class="portfolio-item" href="projects/Lab1/www/index.html" target="_blank">
+                <a class="portfolio-item" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/projects/Lab1/www/index.html" target="_blank">
                   <span class="caption">
                     <span class="caption-content">
                       <h2>Lab work 1</h2>
                       <p class="mb-0">We designed 3 pages and the user can navigate through the pages using a toolbar. We used the basic concepts of html and css to design the pages.</p>
                     </span>
                   </span>
-                  <img class="portfolio-image" src="images/lab1.png">
+                  <img class="portfolio-image" src="./My Profile_files/lab1.png">
                 </a>
               </div>
               <div class="flex-item">
-                <a class="portfolio-item" href="projects/Lab2/part2.html" target="_blank">
+                <a class="portfolio-item" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/projects/Lab2/part2.html" target="_blank">
                   <span class="caption">
                     <span class="caption-content">
                       <h2>Lab work 2</h2>
                       <p class="mb-0">We designed a dynamic table where user can enter the fields and add the column in the table.</p>
                     </span>
                   </span>
-                  <img class="portfolio-image" src="images/lab2.png">
+                  <img class="portfolio-image" src="./My Profile_files/lab2.png">
                 </a>
               </div>
               <div class="flex-item">
-                <a class="portfolio-item" href="projects/Lab4/www/index.html">
+                <a class="portfolio-item" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/projects/Lab4/www/index.html">
                   <span class="caption">
                     <span class="caption-content">
                       <h2>Lab work 4</h2>
                       <p class="mb-0">Designed a survey using html and css. The first page is the sign in page. After entering the username and password, the survey page opens where we used forms to design the survey.</p>
                     </span>
                   </span>
-                  <img class="portfolio-image" src="images/lab4.png">
+                  <img class="portfolio-image" src="./My Profile_files/lab4.png">
                 </a>
               </div>
               <div class="flex-item">
-                <a class="portfolio-item" href="projects/Lab7/www/index.html">
+                <a class="portfolio-item" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/projects/Lab7/www/index.html">
                   <span class="caption">
                     <span class="caption-content">
                       <h2>Lab work 7</h2>
                       <p class="mb-0">In this assignment we modified the Lab assignment 2 to design a dynamic table using javascript.</p>
                     </span>
                   </span>
-                  <img class="portfolio-image" src="images/lab7.png">
+                  <img class="portfolio-image" src="./My Profile_files/lab7.png">
                 </a>
               </div>
               <div class="flex-item">
-                <a class="portfolio-item" href="projects/first-assignment/www/index.html" target="_blank">
+                <a class="portfolio-item" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/projects/first-assignment/www/index.html" target="_blank">
                   <span class="caption">
                     <span class="caption-content">
                       <h2>Assignment First</h2>
                       <p class="mb-0">In this assignment we copied the design of a live website RentPanda.ca. We used basic html and css to design all the pages and forms.</p>
                     </span>
                   </span>
-                  <img class="portfolio-image" src="images/assignment1.png">
+                  <img class="portfolio-image" src="./My Profile_files/assignment1.png">
                 </a>
               </div>
               <div class="flex-item">
-                <a class="portfolio-item" href="#">
+                <a class="portfolio-item" href="file:///Users/utsab/Desktop/Second/WebDev/Assignment/second/index.html#">
                   <span class="caption">
                     <span class="caption-content">
                       <h2>Assignment Second</h2>
                       <p class="mb-0">In this assignment we implemented all the concepts learned in course to design a fully functioning and responsive portfolio.</p>
                     </span>
                   </span>
-                  <img class="portfolio-image" src="images/assignment2.png">
+                  <img class="portfolio-image" src="./My Profile_files/assignment2.png">
                 </a>
               </div>
             </div>
           </div>
         </section>
     </div>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="js/scroll.js"></script>
-    <script src="js/myScript.js"></script>
-</body>
-</html>
+    <script src="./My Profile_files/jquery.min.js"></script>
+    <script src="./My Profile_files/jquery-3.4.1.min.js"></script>
+    <script src="./My Profile_files/scroll.js"></script>
+    <script src="./My Profile_files/myScript.js"></script>
+
+</body></html>
