--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
           </div>
         </section>
 
+
+        <!-- Skills section -->
         <section class="main-content" id="skills">
           <div class="contents">
             <h2 class="mb-5">Skills</h2>
@@ -187,6 +189,8 @@
             </ul>
           </div>
         </section>
+
+        <!-- Interests section -->
         <section class="main-content" id="interests">
           <div class="contents">
             <h2 class="mb-5">Interests</h2>
@@ -195,10 +199,13 @@
             </p>
           </div>
         </section>
+
+
+        <!-- Portfolio Section -->
         <section class="main-content" id="portfolio">
           <div class="contents">
             <h2 class="mb-3">Portfolio</h2>
-            <h3 class="mb-5">My Recent Works</h3>
+            <h3 class="mb-5">My Lab Works</h3>
             <div class="row mb-3">
               <div class="flex-item">
                 <a class="portfolio-item" href="projects/Lab1/www/index.html" target="_blank">
@@ -244,6 +251,9 @@
                   <img class="portfolio-image" src="images/lab7.png">
                 </a>
               </div>
+            </div>
+            <h3 class="mb-5">My Assignments</h3>
+            <div class="row mb-3">
               <div class="flex-item">
                 <a class="portfolio-item" href="projects/first-assignment/www/index.html" target="_blank">
                   <span class="caption">
@@ -255,11 +265,14 @@
                   <img class="portfolio-image" src="images/assignment1.png">
                 </a>
               </div>
-              <div class="flex-item">
+              <div class="flex-item fav">
                 <a class="portfolio-item" href="#">
                   <span class="caption">
                     <span class="caption-content">
-                      <h2>Assignment Second</h2>
+                      <h2>Assignment Second<hr>
+                        <i class="fas fa-star" aria-hidden="true"></i>
+                      </h2>
+
                       <p class="mb-0">In this assignment we implemented all the concepts learned in course to design a fully functioning and responsive portfolio.</p>
                     </span>
                   </span>
